Document minimum requirements iterations

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">February 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/minimum-requirements-iterations">Minimum course requirements – iterations</a>
+      </h3>
+      <p>
+        A view of how the minimum requirements design has been iterated since December.
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/mvp-add-location">Minimum viable Add training location</a>
       </h3>
       <p>
