Document languages design change

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">February 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/languages-iteration">New course wizard: Languages – Iteration 5 February</a>
+      </h3>
+      <p>
+        Simplify the fields for languages
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/accredited-body-iteration">New course wizard: Accredited body – Iteration 5 February</a>
       </h3>
       <p>
