Link to playback presentation

--- a/app/views/history/new-further-education-course/index.html
+++ b/app/views/history/new-further-education-course/index.html
@@ -34,6 +34,10 @@
       </ul>
 
       <h2 class="govuk-heading-l">User research</h2>
+      <p>
+        <a href="https://docs.google.com/presentation/d/17wz2ZWJCNbbqsaywigok-fHv07IUjjiLRSaffCuim64/edit">Research playback presentation</a>
+      </p>
+
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/oDwREDkfjwjW5SpCi?t=18m55.28s">Canterbury Christ Church University</a></li>
         <li><a href="https://lookback.io/watch/uCv5RfwkKAcyad3fJ?t=7m16.01s">Sheffield Hallam University</a></li>
