--- a/app/views/history/new-training-location/index.html
+++ b/app/views/history/new-training-location/index.html
@@ -42,6 +42,10 @@
       <p>No one has needed to edit the details pulled in from Edubase.</p>
 
       <p>On the summary screens we started with ‘Code’, which a user misunderstood. We renamed it to ‘UCAS campus code’ and haven’t seen any further issues. <a href="https://lookback.io/watch/vw6eDzqmL4s24rR2Y?t=51m43s">One provider wanted to change the code</a> to something which aligns with the schools, eg St Mary’s could be M, and St Peter’s could be P.</p>
+
+      <p>
+        <a href="https://docs.google.com/presentation/d/17wz2ZWJCNbbqsaywigok-fHv07IUjjiLRSaffCuim64/edit">Research playback presentation</a>
+      </p>
     </div>
   </div>
 
