Be explicit about editing course information

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -71,7 +71,7 @@
       {% if course.level == 'Further education' %}
         <h3 class="govuk-heading-27 remove-top-margin">
           <a href="/new/{{ course.programmeCode }}/further/edit">
-            Course information
+            Edit course information
           </a>
         </h3>
         <dl class="govuk-summary-list govuk-summary-list--short">
@@ -80,7 +80,7 @@
       {% else %}
         <h3 class="govuk-heading-27 remove-top-margin">
           <a href="/new/{{ course.programmeCode }}/edit">
-            Course information
+            Edit course information
           </a>
         </h3>
         <dl class="govuk-summary-list govuk-summary-list--short govuk-summary-list--short">
