--- a/app/views/new/edit.html
+++ b/app/views/new/edit.html
@@ -1,4 +1,4 @@
-{% set title = 'Change course information' %}
+{% set title = 'Edit course information' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink('/course/' + data['provider-code'] + '/' + code) }}{% endblock %}
