Add application cycle date

--- a/app/views/new/applications-open.html
+++ b/app/views/new/applications-open.html
@@ -36,6 +36,9 @@
               name: 'When I publish the course'
             },
             {
+              name: 'On 21 October 2019 when applications for the 2020/21 cycle open'
+            },
+            {
               name: 'On a specific date',
               more: specificDate
             }
