--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">February 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/rollover-reckons">Rollover reckons</a>
+      </h3>
+      <p>
+        Thoughts on what rollover might look like. And notes on what rollover is right now.
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/status-logic-before-transition">Status logic before UCAS transition</a>
       </h3>
       <p>
