--- a/app/views/history/rollover-reckons.html
+++ b/app/views/history/rollover-reckons.html
@@ -38,6 +38,12 @@
 
       <p>With rollover now happening on a DfE service, there is a risk that a ‘choose your courses’ screen could be misconstrued – either as something being requested or as something receiving DfE’s approval.</p>
 
+      <p>Useful allocations documents:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/713250/Requesting_initial_teacher_training_places_-_process_for_2019_to_2020.pdf">Requesting initial teacher training places (2019-2020)</a></li>
+        <li><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/739433/Initial_teacher_training_allocations_methodology_-_19-20.pdf">Allocations methodology (2019-2020)</a></li>
+      </ul>
+
       <h2 class="govuk-heading-l">Between cycles</h2>
 
       <p>While there are two cycles, providers need to easily manage courses and locations in both. They need to manage vacancies in the current cycle, for example closing courses for summer when they aren’t recruiting.</p>
