--- a/app/views/rollover/start.html
+++ b/app/views/rollover/start.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Start rollover' %}
+{% set title = 'Rollover your courses and training locations' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
 {% block content %}
@@ -9,9 +9,18 @@
         {{ title }}
       </h1>
 
-      <p>Pick the training locations and courses you will offer for the 2019-2020 recruitment cycle.</p>
+      <p>Copy your training locations and courses for the 2020/2021 recruitment cycle.</p>
 
-      <p>In the 2019-2020 cycle you’ll be able to choose a new outcome for your courses, ‘QTS with optional PGCE’, for some providers this means you won’t need to advertise QTS and PGCE with QTS courses separately.</p>
+      <h2 class="govuk-heading-l">What’s new</h2>
+      <p>In this cycle you can:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>choose ‘QTS with optional PGCE’ as a course outcome</li>
+        <li>edit course details up until you publish</li>
+        <li>choose to open applications as soon as you publish a course</li>
+      </ul>
+
+      <p>We are standardising course titles – titles must not contain qualifications or routes.</p>
 
       <div class="govuk-form-group govuk-!-margin-top-6">
         <a href="{{ paths.next }}" class="govuk-button govuk-button--start">Start now</a>
