--- a/app/views/rollover/courses.html
+++ b/app/views/rollover/courses.html
@@ -15,7 +15,7 @@
       {{ macros.checkboxGroup('rollover-courses', courses) }}
 
       <div class="form-group">
-        <a href="/rollover/courses" class="govuk-button">Continue</a>
+        <a href="{{ paths.next }}" class="govuk-button">Continue</a>
       </div>
     </div>
   </div>
