--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -70,8 +70,8 @@
       meta: {
         items: [
           {
-            href: "/quiz",
-            text: "Quiz"
+            href: "/cycles",
+            text: "Cycles"
           },
           {
             href: "/prototype-admin/clear-data",
