--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -12,14 +12,14 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/about-your-organisation">Current cycle (2019-2020)</a>
+          <a href="#">Current cycle (2019-2020)</a>
         </h2>
 
         <p>Manage courses, training locations and vacancies in the current cycle.</p>
       </div>
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/courses">Next cycle (2020-2021)</a>
+          <a href="#">Next cycle (2020-2021)</a>
         </h2>
         <p>Prepare your courses and training locations for the next cycle.</p>
       </div>
