Link to other location flow

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -74,6 +74,10 @@
             text: "Cycles"
           },
           {
+            href: "/new-location/start",
+            text: "New location"
+          },
+          {
             href: "/prototype-admin/clear-data",
             text: "Clear data"
           }
