--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -12,13 +12,12 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-!-margin-bottom-8 status-box" style="border: none">
         <h2 class="govuk-heading-m">
-          <a href="/rollover/start">Rollover your courses and training locations</a>
+          Prepare for the 2020/2021 recruitment cycle
         </h2>
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>begin preparation for the 2020/2021 recruitment cycle</li>
-          <li>choose courses</li>
-          <li>choose training locations</li>
+          <li>choose courses for the next cycle</li>
+          <li>choose training locations for the next cycle</li>
         </ul>
 
         <a href="/rollover/start" class="govuk-button govuk-button--start govuk-!-margin-bottom-2">Start now</a>
