Locations, not training locations

--- a/app/views/location.html
+++ b/app/views/location.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = school.name or 'Add training location' %}
+{% set title = school.name or 'Add location' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
 {% block breadcrumbs %}
@@ -12,7 +12,7 @@
         },
         {
           href: "/locations",
-          text: "Training locations"
+          text: "Locations"
         }
       ]
     })
