--- a/app/views/new/training-locations.html
+++ b/app/views/new/training-locations.html
@@ -1,4 +1,4 @@
-{% set title = 'Pick the training locations for this course' %}
+{% set title = 'Pick the locations for this course' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
@@ -34,6 +34,4 @@
       </form>
     </div>
   </div>
-
-
 {% endblock %}
