--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -60,13 +60,13 @@
       </div>
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/locations">Training locations</a>
+          <a href="/locations">Locations</a>
         </h2>
 
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>edit your training locations</li>
-          <li>add new training locations</li>
+          <li>add locations for Find and UCAS Apply</li>
+          <li>edit location names and addresses</li>
         </ul>
       </div>
       <div class="govuk-!-margin-bottom-8">
