--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Training locations' %}
+{% set title = 'Locations' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
 {% block breadcrumbs %}
@@ -22,16 +22,12 @@
 
   <p>Use this section to:</p>
   <ul class="govuk-list govuk-list--bullet">
-    <li>edit your training locations</li>
-    <li>add new training locations</li>
+    <li>add locations for Find and UCAS Apply</li>
+    <li>edit location names and addresses</li>
   </ul>
 
-  <p>
-    Candidates choose from a list of training locations when they apply for a&nbsp;course.
-  </p>
-
   {{ govukWarningText({
-    text: "You are limited to 37 training locations by UCAS Apply",
+    html: "Candidates choose one of these locations when they apply for a&nbsp;course.<br />You are limited to 37 locations by UCAS Apply",
     iconFallbackText: "Warning"
   }) }}
 
