--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -52,8 +52,9 @@
 
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>add locations for Find and UCAS Apply</li>
+          <li>manage the locations candidates select from when they apply</li>
           <li>edit location names and addresses</li>
+          <li>add locations</li>
         </ul>
       </div>
       <div class="govuk-!-margin-bottom-8">
