--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -20,17 +20,6 @@
     {{ title }}
   </h1>
 
-  <p>Use this section to:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>add locations for Find and UCAS Apply</li>
-    <li>edit location names and addresses</li>
-  </ul>
-
-  {{ govukWarningText({
-    html: "Candidates choose one of these locations when they apply for a&nbsp;course.<br />You are limited to 37 locations by UCAS Apply",
-    iconFallbackText: "Warning"
-  }) }}
-
   <!-- <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">Locations applicants can choose</h2>
@@ -44,6 +33,19 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <p>In this section, you can add and edit information about your locations.</p>
+
+      <div class="govuk-inset-text">
+        <p>By ‘locations’ we mean the places that a candidate can select when making their application - choosing from the list that will appear on the course page in Find and on the UCAS application form.</p>
+
+        <p><a href="#">Guidance on setting up your locations</a></p>
+      </div>
+
+      {{ govukWarningText({
+        html: "You are limited to 37 locations by UCAS Apply",
+        iconFallbackText: "Warning"
+      }) }}
+
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -62,7 +64,7 @@
       </table>
 
       <p class="add-top-margin">
-        <a href="/location/start" class="govuk-button">Add a new training location</a>
+        <a href="/location/start" class="govuk-button">Add a location</a>
       </p>
     </div>
   </div>
