Tweak success message

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -22,8 +22,8 @@
       Your location has been added
     </h3>
     <p>
-      Before candidates can pick this location you must assign it to a course.<br />
-      Edit a course, or pick this location when adding a new one.
+      Before candidates can pick this location, you must assign it to one or more courses.<br />
+      You can do this when adding or editing courses.
     </p>
     <p class="govuk-!-margin-bottom-0">
       <a href="/courses">Your courses</a>
