Document MVP location iteration

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">February 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/mvp-add-location-iteration">Add a location – Iteration 13 February</a>
+      </h3>
+      <p>
+        Clarify the purpose of locations
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/rollover-reckons">Rollover reckons</a>
       </h3>
       <p>
