Set next cycle context

--- a/app/views/new/applications-open.html
+++ b/app/views/new/applications-open.html
@@ -33,10 +33,10 @@
         -->
         {% set fields = [
             {
-              name: 'When I publish the course'
+              name: 'When applications for the 2020/21 cycle open'
             },
             {
-              name: 'On 21 October 2019 when applications for the 2020/21 cycle open'
+              name: 'When I publish the course'
             },
             {
               name: 'On a specific date',
