Tweak SEND description

--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -30,7 +30,7 @@
         <h2 class="govuk-heading-m">Special educational needs and disability (SEND)</h2>
         {% set fields = [
             {
-              name: 'This is a SEND course'
+              name: 'This course has an additional SEND specialism'
             }
           ]
         %}
