--- a/app/views/rollover/start.html
+++ b/app/views/rollover/start.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Rollover your courses and training locations' %}
+{% set title = 'Rollover your courses and locations' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
@@ -10,7 +10,7 @@
         {{ title }}
       </h1>
 
-      <p>Copy your training locations and courses for the 2020/2021 recruitment cycle.</p>
+      <p>Copy your locations and courses for the 2020/2021 recruitment cycle.</p>
 
       <h2 class="govuk-heading-l">What’s new</h2>
       <p>In this cycle you can:</p>
