Stub an onboarding wizard

--- a/app/views/onboarding/accept-terms.html
+++ b/app/views/onboarding/accept-terms.html
@@ -23,7 +23,7 @@
       </p>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
-      <form action="#" method="post">
+      <form action="{{ paths.next }}" method="post">
           {% set fields = [
               {
                 name: 'I agree to the terms and conditions'
